--- a/app/src/main/res/layout/create_room_activity.xml
+++ b/app/src/main/res/layout/create_room_activity.xml
@@ -49,11 +49,74 @@
                 android:text="@string/default_room" />
         </LinearLayout>
         
-          <Button
-                android:id="@+id/selectMode"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/room_role_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/select" />
+                android:text="@string/room_role_text" />
+
+            <EditText
+                android:id="@+id/room_role"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:text="@string/room_role_default" />
+        </LinearLayout>
+          
+           <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+            android:id="@+id/isAuthAudioSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isAuthAudioSend" />
+        
+        <CheckBox
+            android:id="@+id/isAuthAudioRev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isAuthAudioRev" />
+        </LinearLayout>
+            
+             <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+            android:id="@+id/isAuthVideoSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isAuthVideoSend" />
+        
+        <CheckBox
+            android:id="@+id/isAuthVideoRev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isAuthVideoRev" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/isSupportMultiVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isSupportMultiVideo" />
+        
+         <CheckBox
+            android:id="@+id/isOpenBackCameraFirst"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/isOpenBackCameraFirst" />
+        
+        
+        
+        
+
     </LinearLayout>
 
     <Button
